[package]
authors = ["Yupiel <yupiel@yupiel.net>", "Siri <siri1999kira@yahoo.co.jp>"]
edition = "2021"
name = "hapticslib"
repository = "https://github.com/Siri-chan/Heisters-Haptics"
version = "0.1.0"

#size reduction efforts
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib"]

[dependencies]
mlua-sys = { version = "^0.5", features = ["luajit", "module"] }
